--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -68,9 +68,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading cumulative.csv.zip to /Users/whoami/Repositories/kepler-exoplanet-analysis\n",
-      " 86%|████████████████████████████████▊     | 1.00M/1.16M [00:00<00:00, 7.21MB/s]\n",
-      "100%|██████████████████████████████████████| 1.16M/1.16M [00:00<00:00, 8.06MB/s]\n",
+      "Downloading cumulative.csv.zip to /Users/peanutbutterandchocolate/Repositories/kepler-exoplanet-analysis\n",
+      " 86%|████████████████████████████████▊     | 1.00M/1.16M [00:00<00:00, 6.39MB/s]\n",
+      "100%|██████████████████████████████████████| 1.16M/1.16M [00:00<00:00, 7.15MB/s]\n",
       "Archive:  cumulative.csv.zip\n",
       "  inflating: cumulative.csv          \n"
      ]
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "26264f32-6c1f-4d50-9d0a-8829ed32b282",
    "metadata": {},
    "outputs": [],
@@ -295,11 +295,13 @@
     }
    ],
    "source": [
-    "os.system('kaggle datasets download nasa/kepler-exoplanet-search-results -f cumulative.csv')\n",
-    "os.system('unzip cumulative.csv.zip')\n",
-    "os.system('rm cumulative.csv.zip')\n",
-    "kepler = pd.read_csv('cumulative.csv')\n",
-    "kepler.info()"
+    "# This code will download the kepler data, unzip the file, remove the zip file, and read the data into a dataframe\n",
+    "\n",
+    "# os.system('kaggle datasets download nasa/kepler-exoplanet-search-results -f cumulative.csv')\n",
+    "# os.system('unzip cumulative.csv.zip')\n",
+    "# os.system('rm cumulative.csv.zip')\n",
+    "# kepler = pd.read_csv('cumulative.csv')\n",
+    "# kepler.info()"
    ]
   },
   {
@@ -386,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "a60be956-2977-4e95-a509-86674dd23161",
    "metadata": {},
    "outputs": [],
@@ -396,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "a56e53e7-8571-4c38-b1ed-ef6358a8b32d",
    "metadata": {},
    "outputs": [],
@@ -407,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "749497dd-16cc-4923-a200-dc1cf4d8ba05",
    "metadata": {},
    "outputs": [],
@@ -437,29 +439,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "id": "342471d2-832d-4d6a-99c1-724152710078",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading cumulative.csv.zip to /Users/whoami/Repositories/kepler-exoplanet-analysis\n",
-      "\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1.16M/1.16M [00:00<00:00, 6.56MB/s]\n"
+      "100%|██████████| 1.16M/1.16M [00:00<00:00, 12.1MB/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Downloading cumulative.csv.zip to /Users/peanutbutterandchocolate/Repositories/kepler-exoplanet-analysis\n",
+      "\n",
       "Archive:  cumulative.csv.zip\n",
       "  inflating: cumulative.csv          \n",
       "<class 'pandas.core.frame.DataFrame'>\n",
