:white_check_mark: Completed planning.
Changes to be committed:
	modified:   README.md
	modified:   wrangle.ipynb

README: Completed planning phase and added to README.

wrangle: No significant changes.

--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -68,9 +68,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading cumulative.csv.zip to /Users/peanutbutterandchocolate/Repositories/kepler-exoplanet-analysis\n",
-      " 86%|████████████████████████████████▊     | 1.00M/1.16M [00:00<00:00, 6.39MB/s]\n",
-      "100%|██████████████████████████████████████| 1.16M/1.16M [00:00<00:00, 7.15MB/s]\n",
+      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /Users/whoami/.kaggle/kaggle.json'\n",
+      "Downloading cumulative.csv.zip to /Users/whoami/Repositories/kepler-exoplanet-analysis\n",
+      " 86%|████████████████████████████████▊     | 1.00M/1.16M [00:00<00:00, 5.47MB/s]\n",
+      "100%|██████████████████████████████████████| 1.16M/1.16M [00:00<00:00, 5.74MB/s]\n",
       "Archive:  cumulative.csv.zip\n",
       "  inflating: cumulative.csv          \n"
      ]
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "26264f32-6c1f-4d50-9d0a-8829ed32b282",
    "metadata": {},
    "outputs": [],
@@ -218,82 +219,7 @@
    "execution_count": 6,
    "id": "655a2f77-c67c-4df1-a99d-c1290f9a430c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1.16M/1.16M [00:00<00:00, 8.87MB/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading cumulative.csv.zip to /Users/whoami/Repositories/kepler-exoplanet-analysis\n",
-      "\n",
-      "Archive:  cumulative.csv.zip\n",
-      "  inflating: cumulative.csv          \n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 9564 entries, 0 to 9563\n",
-      "Data columns (total 50 columns):\n",
-      " #   Column             Non-Null Count  Dtype  \n",
-      "---  ------             --------------  -----  \n",
-      " 0   rowid              9564 non-null   int64  \n",
-      " 1   kepid              9564 non-null   int64  \n",
-      " 2   kepoi_name         9564 non-null   object \n",
-      " 3   kepler_name        2294 non-null   object \n",
-      " 4   koi_disposition    9564 non-null   object \n",
-      " 5   koi_pdisposition   9564 non-null   object \n",
-      " 6   koi_score          8054 non-null   float64\n",
-      " 7   koi_fpflag_nt      9564 non-null   int64  \n",
-      " 8   koi_fpflag_ss      9564 non-null   int64  \n",
-      " 9   koi_fpflag_co      9564 non-null   int64  \n",
-      " 10  koi_fpflag_ec      9564 non-null   int64  \n",
-      " 11  koi_period         9564 non-null   float64\n",
-      " 12  koi_period_err1    9110 non-null   float64\n",
-      " 13  koi_period_err2    9110 non-null   float64\n",
-      " 14  koi_time0bk        9564 non-null   float64\n",
-      " 15  koi_time0bk_err1   9110 non-null   float64\n",
-      " 16  koi_time0bk_err2   9110 non-null   float64\n",
-      " 17  koi_impact         9201 non-null   float64\n",
-      " 18  koi_impact_err1    9110 non-null   float64\n",
-      " 19  koi_impact_err2    9110 non-null   float64\n",
-      " 20  koi_duration       9564 non-null   float64\n",
-      " 21  koi_duration_err1  9110 non-null   float64\n",
-      " 22  koi_duration_err2  9110 non-null   float64\n",
-      " 23  koi_depth          9201 non-null   float64\n",
-      " 24  koi_depth_err1     9110 non-null   float64\n",
-      " 25  koi_depth_err2     9110 non-null   float64\n",
-      " 26  koi_prad           9201 non-null   float64\n",
-      " 27  koi_prad_err1      9201 non-null   float64\n",
-      " 28  koi_prad_err2      9201 non-null   float64\n",
-      " 29  koi_teq            9201 non-null   float64\n",
-      " 30  koi_teq_err1       0 non-null      float64\n",
-      " 31  koi_teq_err2       0 non-null      float64\n",
-      " 32  koi_insol          9243 non-null   float64\n",
-      " 33  koi_insol_err1     9243 non-null   float64\n",
-      " 34  koi_insol_err2     9243 non-null   float64\n",
-      " 35  koi_model_snr      9201 non-null   float64\n",
-      " 36  koi_tce_plnt_num   9218 non-null   float64\n",
-      " 37  koi_tce_delivname  9218 non-null   object \n",
-      " 38  koi_steff          9201 non-null   float64\n",
-      " 39  koi_steff_err1     9096 non-null   float64\n",
-      " 40  koi_steff_err2     9081 non-null   float64\n",
-      " 41  koi_slogg          9201 non-null   float64\n",
-      " 42  koi_slogg_err1     9096 non-null   float64\n",
-      " 43  koi_slogg_err2     9096 non-null   float64\n",
-      " 44  koi_srad           9201 non-null   float64\n",
-      " 45  koi_srad_err1      9096 non-null   float64\n",
-      " 46  koi_srad_err2      9096 non-null   float64\n",
-      " 47  ra                 9564 non-null   float64\n",
-      " 48  dec                9564 non-null   float64\n",
-      " 49  koi_kepmag         9563 non-null   float64\n",
-      "dtypes: float64(39), int64(6), object(5)\n",
-      "memory usage: 3.6+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This code will download the kepler data, unzip the file, remove the zip file, and read the data into a dataframe\n",
     "\n",
@@ -314,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "2f93ea1e-5398-4ad3-ba9b-a4f5b3e4f179",
    "metadata": {},
    "outputs": [
@@ -332,7 +258,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mSystemError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/95/v52kk6ys7s14hmmc3xm7b1xr0000gn/T/ipykernel_951/457148650.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'invalid command'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0moutput\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     raise SystemError('''\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mAn\u001b[0m \u001b[0merror\u001b[0m \u001b[0moccurred\u001b[0m \u001b[0mwhen\u001b[0m \u001b[0mrunning\u001b[0m \u001b[0;34m\"kaggle datasets download\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mYou\u001b[0m \u001b[0mmust\u001b[0m \u001b[0meither\u001b[0m \u001b[0mfollow\u001b[0m \u001b[0mthe\u001b[0m \u001b[0minstructions\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0minstalling\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mKaggle\u001b[0m \u001b[0mAPI\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/95/v52kk6ys7s14hmmc3xm7b1xr0000gn/T/ipykernel_8361/457148650.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'invalid command'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0moutput\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     raise SystemError('''\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mAn\u001b[0m \u001b[0merror\u001b[0m \u001b[0moccurred\u001b[0m \u001b[0mwhen\u001b[0m \u001b[0mrunning\u001b[0m \u001b[0;34m\"kaggle datasets download\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mYou\u001b[0m \u001b[0mmust\u001b[0m \u001b[0meither\u001b[0m \u001b[0mfollow\u001b[0m \u001b[0mthe\u001b[0m \u001b[0minstructions\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0minstalling\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mKaggle\u001b[0m \u001b[0mAPI\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mSystemError\u001b[0m: \n        An error occurred when running \"kaggle datasets download\".\n        You must either follow the instructions for installing the Kaggle API\n        here https://github.com/Kaggle/kaggle-api or manually download the \n        data from here https://exoplanetarchive.ipac.caltech.edu/docs/data.html\n    "
      ]
     }
@@ -353,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "64319651-f230-4fb3-962f-591d7b010c08",
    "metadata": {},
    "outputs": [
@@ -388,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "a60be956-2977-4e95-a509-86674dd23161",
    "metadata": {},
    "outputs": [],
@@ -398,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "a56e53e7-8571-4c38-b1ed-ef6358a8b32d",
    "metadata": {},
    "outputs": [],
@@ -409,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "749497dd-16cc-4923-a200-dc1cf4d8ba05",
    "metadata": {},
    "outputs": [],
@@ -439,25 +365,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "342471d2-832d-4d6a-99c1-724152710078",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1.16M/1.16M [00:00<00:00, 12.1MB/s]\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading cumulative.csv.zip to /Users/peanutbutterandchocolate/Repositories/kepler-exoplanet-analysis\n",
-      "\n",
-      "Archive:  cumulative.csv.zip\n",
-      "  inflating: cumulative.csv          \n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 9564 entries, 0 to 9563\n",
       "Data columns (total 50 columns):\n",
@@ -544,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "739f4f88-3003-4030-98fc-079b200ab63e",
+   "id": "65d34119-cd93-4bc4-9bd4-d02523e1ea8f",
    "metadata": {},
    "outputs": [],
    "source": []
