:heavy_plus_sign: Began preparation phase.
Changes to be committed:
	new file:   univariate_analysis.py
	modified:   wrangle.ipynb

univariate_analysis: Added helper file for performing
    univariate analysis.

wrangle: Began preparation phase. Identified some columns to drop
    as a result of too many missing values.

--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -16,12 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "60f3efb1-c279-401f-ad0c-5dfa8baf13d6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "from univariate_analysis import *"
    ]
   },
   {
@@ -30,6 +32,8 @@
    "metadata": {},
    "source": [
     "## Data Acquisition\n",
+    "\n",
+    "Before we can begin doing anything the data must be acquired. The data can be acquired from either the NASA Exoplanet Archive or from Kaggle. We'll walk through both methods of acquiring the data.\n",
     "\n",
     "### Download With Kaggle API\n",
     "\n",
@@ -156,6 +160,8 @@
     }
    ],
    "source": [
+    "# Now let's read the data into a dataframe.\n",
+    "\n",
     "kepler = pd.read_csv('cumulative.csv')\n",
     "kepler.info()"
    ]
@@ -453,13 +459,425 @@
    "id": "d6d8ac17-14ab-44e4-90aa-91598a7351d3",
    "metadata": {},
    "source": [
-    "## Data Preparation"
+    "## Data Preparation\n",
+    "\n",
+    "Now that we've acquired the data we need to prepare it before we can begin analysis. In order to prepare the data we'll want to handle any missing values either by removing them or imputing them. We can also drop any columns that are undeniably useless for achieving our goals and we'll probably want to rename the columns for readability.\n",
+    "\n",
+    "### Handling Missing Values\n",
+    "\n",
+    "Let's start by handling the missing values. We'll look at the number of missing values in each column and determine a best course of action from there."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "65d34119-cd93-4bc4-9bd4-d02523e1ea8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rows_missing</th>\n",
+       "      <th>percent_missing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>rowid</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>kepid</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>kepoi_name</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>kepler_name</th>\n",
+       "      <td>7270</td>\n",
+       "      <td>0.760142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_disposition</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_pdisposition</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_score</th>\n",
+       "      <td>1510</td>\n",
+       "      <td>0.157884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_fpflag_nt</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_fpflag_ss</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_fpflag_co</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_fpflag_ec</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_period</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_period_err1</th>\n",
+       "      <td>454</td>\n",
+       "      <td>0.047470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_period_err2</th>\n",
+       "      <td>454</td>\n",
+       "      <td>0.047470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_time0bk</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_time0bk_err1</th>\n",
+       "      <td>454</td>\n",
+       "      <td>0.047470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_time0bk_err2</th>\n",
+       "      <td>454</td>\n",
+       "      <td>0.047470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_impact</th>\n",
+       "      <td>363</td>\n",
+       "      <td>0.037955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_impact_err1</th>\n",
+       "      <td>454</td>\n",
+       "      <td>0.047470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_impact_err2</th>\n",
+       "      <td>454</td>\n",
+       "      <td>0.047470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_duration</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_duration_err1</th>\n",
+       "      <td>454</td>\n",
+       "      <td>0.047470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_duration_err2</th>\n",
+       "      <td>454</td>\n",
+       "      <td>0.047470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_depth</th>\n",
+       "      <td>363</td>\n",
+       "      <td>0.037955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_depth_err1</th>\n",
+       "      <td>454</td>\n",
+       "      <td>0.047470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_depth_err2</th>\n",
+       "      <td>454</td>\n",
+       "      <td>0.047470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_prad</th>\n",
+       "      <td>363</td>\n",
+       "      <td>0.037955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_prad_err1</th>\n",
+       "      <td>363</td>\n",
+       "      <td>0.037955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_prad_err2</th>\n",
+       "      <td>363</td>\n",
+       "      <td>0.037955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_teq</th>\n",
+       "      <td>363</td>\n",
+       "      <td>0.037955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_teq_err1</th>\n",
+       "      <td>9564</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_teq_err2</th>\n",
+       "      <td>9564</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_insol</th>\n",
+       "      <td>321</td>\n",
+       "      <td>0.033563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_insol_err1</th>\n",
+       "      <td>321</td>\n",
+       "      <td>0.033563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_insol_err2</th>\n",
+       "      <td>321</td>\n",
+       "      <td>0.033563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_model_snr</th>\n",
+       "      <td>363</td>\n",
+       "      <td>0.037955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_tce_plnt_num</th>\n",
+       "      <td>346</td>\n",
+       "      <td>0.036177</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_tce_delivname</th>\n",
+       "      <td>346</td>\n",
+       "      <td>0.036177</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_steff</th>\n",
+       "      <td>363</td>\n",
+       "      <td>0.037955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_steff_err1</th>\n",
+       "      <td>468</td>\n",
+       "      <td>0.048934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_steff_err2</th>\n",
+       "      <td>483</td>\n",
+       "      <td>0.050502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_slogg</th>\n",
+       "      <td>363</td>\n",
+       "      <td>0.037955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_slogg_err1</th>\n",
+       "      <td>468</td>\n",
+       "      <td>0.048934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_slogg_err2</th>\n",
+       "      <td>468</td>\n",
+       "      <td>0.048934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_srad</th>\n",
+       "      <td>363</td>\n",
+       "      <td>0.037955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_srad_err1</th>\n",
+       "      <td>468</td>\n",
+       "      <td>0.048934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_srad_err2</th>\n",
+       "      <td>468</td>\n",
+       "      <td>0.048934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ra</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dec</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_kepmag</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000105</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   rows_missing  percent_missing\n",
+       "rowid                         0         0.000000\n",
+       "kepid                         0         0.000000\n",
+       "kepoi_name                    0         0.000000\n",
+       "kepler_name                7270         0.760142\n",
+       "koi_disposition               0         0.000000\n",
+       "koi_pdisposition              0         0.000000\n",
+       "koi_score                  1510         0.157884\n",
+       "koi_fpflag_nt                 0         0.000000\n",
+       "koi_fpflag_ss                 0         0.000000\n",
+       "koi_fpflag_co                 0         0.000000\n",
+       "koi_fpflag_ec                 0         0.000000\n",
+       "koi_period                    0         0.000000\n",
+       "koi_period_err1             454         0.047470\n",
+       "koi_period_err2             454         0.047470\n",
+       "koi_time0bk                   0         0.000000\n",
+       "koi_time0bk_err1            454         0.047470\n",
+       "koi_time0bk_err2            454         0.047470\n",
+       "koi_impact                  363         0.037955\n",
+       "koi_impact_err1             454         0.047470\n",
+       "koi_impact_err2             454         0.047470\n",
+       "koi_duration                  0         0.000000\n",
+       "koi_duration_err1           454         0.047470\n",
+       "koi_duration_err2           454         0.047470\n",
+       "koi_depth                   363         0.037955\n",
+       "koi_depth_err1              454         0.047470\n",
+       "koi_depth_err2              454         0.047470\n",
+       "koi_prad                    363         0.037955\n",
+       "koi_prad_err1               363         0.037955\n",
+       "koi_prad_err2               363         0.037955\n",
+       "koi_teq                     363         0.037955\n",
+       "koi_teq_err1               9564         1.000000\n",
+       "koi_teq_err2               9564         1.000000\n",
+       "koi_insol                   321         0.033563\n",
+       "koi_insol_err1              321         0.033563\n",
+       "koi_insol_err2              321         0.033563\n",
+       "koi_model_snr               363         0.037955\n",
+       "koi_tce_plnt_num            346         0.036177\n",
+       "koi_tce_delivname           346         0.036177\n",
+       "koi_steff                   363         0.037955\n",
+       "koi_steff_err1              468         0.048934\n",
+       "koi_steff_err2              483         0.050502\n",
+       "koi_slogg                   363         0.037955\n",
+       "koi_slogg_err1              468         0.048934\n",
+       "koi_slogg_err2              468         0.048934\n",
+       "koi_srad                    363         0.037955\n",
+       "koi_srad_err1               468         0.048934\n",
+       "koi_srad_err2               468         0.048934\n",
+       "ra                            0         0.000000\n",
+       "dec                           0         0.000000\n",
+       "koi_kepmag                    1         0.000105"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's see the number of missing values in each column.\n",
+    "\n",
+    "summarize_column_nulls(kepler)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1815262a-e694-4bd1-abe7-3f5ae0aeb82b",
+   "metadata": {},
+   "source": [
+    "koi_teq_err1 and koi_teq_err2 are both completely empty so these can be dropped. The kepler_name column is also mostly empty. The data dictionary describes this feature as a more memorable name given to confirmed exoplanets. This column won't be helpful to our goal either way so it can be dropped. The koi_score column is missing 15% of its values. The data dictionary describes this feature as the confidence of the disposition. This feature may possibly leak information about the target. I suspect that a koi_score of 1 may indicate a confirmed disposition and a koi_score of 0 may indicate a false positive disposition. Let's take a look at this while being sure to not look too deeply into the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "3cdee245-b069-442a-a1e4-80cab9f6e59b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['CONFIRMED', 'FALSE POSITIVE', 'CANDIDATE'], dtype=object)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# What are the unique values of disposition?\n",
+    "\n",
+    "kepler.koi_disposition.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9ff307f5-6286-4baf-96d5-c773d94e1536",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.0, 0.0)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's look at the unique values of koi_score for observations with a disposition of CONFIRMED.\n",
+    "\n",
+    "confirmed = kepler.koi_disposition == 'CONFIRMED'\n",
+    "kepler[confirmed].koi_score.max(), kepler[confirmed].koi_score.min()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65d34119-cd93-4bc4-9bd4-d02523e1ea8f",
+   "id": "4e4b69fc-928e-4d8c-b5ce-c1dd86a83c59",
    "metadata": {},
    "outputs": [],
    "source": []
